--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ table, td, th {
   word-wrap: break-word;
 	max-width: 500px;
   width: 50%
-  style="color:white;">
+  style="color:white;"
 }
 
 
@@ -60,8 +60,8 @@ border-collapse: collapse;
 			<td>Skill Loadout</td>
             
             <td>
-            	<table border="5px" bordercolor="#F35557">
-                <h4 align="center">Skill Loadout</h4>
+            	<table style='border:"5px"' bordercolor="#F35557">
+                <h4 >Skill Loadout</h4>
                     <tr>
                       <td>Skill1</td>
                       <td>Skill2</td>
@@ -91,8 +91,8 @@ border-collapse: collapse;
 			<td>Skill Loadout</td>
             
             <td>
-            	<table border="5px" bordercolor="#F35557">
-                <h4 align="center">Skill Loadout</h4>
+            	<table  bordercolor="#F35557">
+                <h4 >Skill Loadout</h4>
                     <tr>
                       <td>Skill1</td>
                       <td>Skill2</td>
@@ -127,11 +127,3 @@ border-collapse: collapse;
 
 
 </html>
-
-
-<!-- index.html -->
-
-<!-- inline js is not allowed, so try and move to seperate file>
-
-<!-- images have to be dumped with the files, css sheet as well ideally css theme is inline with the rest of the stream overlay-->
-<!-- to update, maybe have them pull from our own website? since we would need it to dynamically update based on our own data. might be okay hardcoded now, but if somebody is allowed to change, need to add that in somehow --> 
