--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
+
+<div>testing things hosting things</div>
+
 <!-- interanl css, ie defined in doc, only if simple or unique to page -->
-<style>
+<!-- <style>
 body {
   background-color: rgb(245,250,251);
   
@@ -122,7 +125,7 @@ border-collapse: collapse;
 <script src="jquery.js"></script>  
 <script src="script_source.js"></script> 
 
-<script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
+<script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script> -->
 
 
 
