--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ border-collapse: collapse;
 	</table>  
  
 <!-- only externals allowed are the twitch extension library and the google analytics, all others must be in the zip file, cannot reference -->
-<script src="jquery.js"></script>  
+<!-- <script src="jquery.js"></script>  
 <script src="script_source.js"></script> 
 
-<script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
+<script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script> -->
 
 
 
