--- a/testing_html.html
+++ b/testing_html.html
@@ -1,42 +1,7 @@
 <!DOCTYPE html>
 
-
+<html>
 <div>testing things hosting things</div>
-
-<!-- interanl css, ie defined in doc, only if simple or unique to page -->
-<!-- <style>
-body {
-  background-color: rgb(245,250,251);
-  
-}
-
-h1 {
-  color: rgb(82,118,217);
-  opacity: 0.75;
-  border-style: inset;
-}
-
-
-table, td, th {
-  border: 1px solid black;
-  border-style: inset;
-  word-wrap: break-word;
-	max-width: 500px;
-  width: 50%
-  style="color:white;"
-}
-
-
-table{
-border-collapse: collapse;
-}
-
-
-</style>
-
-
-<--<link rel="stylesheet" href="mystyle.css">-->
-
 
 
 <h1>Test Test</h1>
@@ -122,12 +87,6 @@ border-collapse: collapse;
 	</tbody>  
 	</table>  
  
-<!-- only externals allowed are the twitch extension library and the google analytics, all others must be in the zip file, cannot reference -->
-<!-- <script src="jquery.js"></script>  
-<script src="script_source.js"></script> 
-
-<script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script> -->
-
 
 
 </html>
