--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
-					<img src="assets/img/home_profile.jpg" alt="Me, attempting to look cool." style="max-width: .3vw; max-height: .3vh;">
+					<img src="assets/img/home_profile.jpg" title="Me, attempting to look cool." style="max-width: .3vw; max-height: .3vh;">
 					<h1>Welcome! This is my personal website, blog, and depository of random thoughts</h1>
 					<p>Hello there! I am a biomedical engineer currently living and working the in San Francisco Bay Area. I am currently working at Prodeon Medical as an Research and Development Engineer, focused on designing and developing nitinol implants, associated catheter systems, and test methods.</p>
 					<P>In my spare time, I am an amateur data analyst/scientist, with my current interest in researching how ideas spread, how those ideas might influence behavior, and the practical applications of such models in fields such as marketing. My other interests include machine learning, investing, video games, and tinkering to create artsy projects.</P>
