--- a/work/work02.html
+++ b/work/work02.html
@@ -84,7 +84,7 @@
     <hr>
 		<div class="row mt left">	
 			<div class="col-lg-8 col-lg-offset-2">
-        <h3>Twitch Extension</h3>
+        <h3 alt="so viewers can stop asking the same questions">Twitch Extension</h3>
 				<p>
           The highlight of my time at SAGE. <a href="https://www.twitch.tv/p/en/extensions/">Twitch Extensions</a> allow for a next level of interactive experiences with the audience,
           beyond just chat. I developed an extension for use with one of our tournaments, allowing viewers to see competitors builds, stats, and other game info that normally wouldn't be accessible.
