SAGE update continued

--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
 	<div class="container pt">
 		<div class="row mt">
 			<div class="col-lg-6 col-lg-offset-3 centered">
-				<h3>Experience</h3>
+				<h3>Work</h3>
 				<hr>
 				<p>My work experience has primarily focused on the medical device field, specifically in Research and Development. But I've also tried to explore my other passions, like video games, as well.</p>
 			</div>
@@ -69,16 +69,16 @@
 		<div class="row centered">	
 			<div class="col-lg-4">
 
-				<a class="zoom green" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/portfolio/port01.jpg" alt="" /></a>
+				<a class="zoom green" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/portfolio/pot01.jpg" alt="" /></a>
 				<h2>Prodeon Medical / MedeonBio</h2>
 				<h4>R&D Engineer</h4>
-				<p>2016-Current</p>
+				<p>Jul 2016 - Current</p>
 			</div>
 			<div class="col-lg-4">
 				<a class="zoom green" href="work/work02.html"><img class="img-responsive folio_icon center" src="assets/img/work/work02-SAGE/logo_small.png" alt="" /></a>
 				<h2>SAGE</h2>
 				<h4>CTO</h4>
-				<p>2021-2022</p>
+				<p>Nov 2021 - May 2022</p>
 			</div>
 
 		</div><!-- /row -->
