--- a/work/work02.html
+++ b/work/work02.html
@@ -177,14 +177,17 @@
         <h3 id=sec3>Competitor Experience Improvement</h3>
 				<p>
           <img class="img-responsive" src="assets/img/portfolio/3.jpg" alt="">
-          Turns out some of the more impactful things you can do are also sometimes the simplest.
+          It turns out some of the more impactful things you can do are also sometimes the simplest. We did a lot of watching of other Tournament Organizers, and one of the common issues we saw was the difficulty
+          in coordinating and ensuring communications between all the competitors. Most just gave a discord channel, which quickly turned into a cacophony as people tried to ping each other in a general chat. 
+          Enter our solution, the google form, and its sheet output. 
+          This also had a side effect in allowing us to collect tournament data on competitor team compositions, a great boon from the analytical perspective.
         </p>
         <hr>
 
         <h3 id=sec4>Training Ark Companion App</h3>
 				<p>
           <img class="img-responsive" src="assets/img/portfolio/3.jpg" alt="">
-          Pun time
+          Our planned app that would help track pvp performance
         </p>
         <hr>
 
