--- a/work/work02.html
+++ b/work/work02.html
@@ -43,12 +43,12 @@
         </div>
         <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Projects</a></li>
-          <li><a href="testing.html">Travel</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../work.html">Work</a></li>
+          <li><a href="../contact.html">Projects</a></li>
+          <li><a href="../testing.html">Travel</a></li>
+          <li><a href="../blog.html">Blog</a></li>
+          <li><a href="../contact.html">Contact</a></li>
     
         </ul>
         </div><!--/.nav-collapse -->
@@ -60,7 +60,7 @@
 	
 	<div class="container pt">
 		<div class="row mt">
-			<div class="col-lg-6 col-lg-offset-3 centered">
+			<div class="col-lg-8 col-lg-offset-2 ">
 				<h1>SAGE</h1>
 				<hr>
 				<p>
