--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
 		<div class="row centered">	
 			<div class="col-lg-4">
 
-				<a class="zoom green" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/portfolio/pot01.jpg" alt="" /></a>
+				<a class="zoom green" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/work/work01-Prodeon/Logo.png" alt="" /></a>
 				<h2>Prodeon Medical / MedeonBio</h2>
 				<h4>R&D Engineer</h4>
 				<p>Jul 2016 - Current</p>
