--- a/work.html
+++ b/work.html
@@ -69,13 +69,13 @@
 		<div class="row centered">	
 			<div class="col-lg-4">
 
-				<a class="zoom green" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/work/work01-Prodeon/Logo.png" alt="" /></a>
+				<a class="green" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/work/work01-Prodeon/Logo.png" alt="" /></a>
 				<h2>Prodeon Medical / MedeonBio</h2>
 				<h4>R&D Engineer</h4>
 				<p>Jul 2016 - Current</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom green" href="work/work02.html"><img class="img-responsive folio_icon center" src="assets/img/work/work02-SAGE/logo_small.png" alt="" /></a>
+				<a class="green" href="work/work02.html"><img class="img-responsive folio_icon center" src="assets/img/work/work02-SAGE/logo_small.png" alt="" /></a>
 				<h2>SAGE</h2>
 				<h4>CTO</h4>
 				<p>Nov 2021 - May 2022</p>
