Setting Up the rest of the pages

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>STANLEY - Free Bootstrap Theme </title>
+    <title>Kenneth Chang | Blog </title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -37,18 +37,31 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">STANLEY</a>
+          <a class="navbar-brand" href="index.html">Kenneth Chang</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+			  <li><a href="work.html">Work</a></li>
+			  <li><a href="projects.html">Projects</a></li>
+			  <li><a href="travel.html">Travel</a></li>
+			  <li><a href="blog.html">Blog</a></li>
+			  <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
+
+	<div class="container pt">
+		<div class="row mt">
+			<div class="col-lg-6 col-lg-offset-3 centered">
+				<h3>Blog</h3>
+				<hr>
+				<p>Where I intend to dump my random thoughts. Currently Under Construction/just placeholders</p>
+			</div>
+		</div>
+		
+	</div>
 
 	<!-- +++++ Posts Lists +++++ -->
 	<!-- +++++ First Post +++++ -->
@@ -56,11 +69,10 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
+					<p><img src="" width="50px" height="50px"> <ba>person</ba></p>
 					<p><bd>January 18, 2014</bd></p>
-					<h4>The Amazing Spiderman</h4>
-					<p><b>Spider-Man</b> is a fictional character, a comic book superhero that appears in comic books published by Marvel Comics. Created by writer-editor Stan Lee and writer-artist Steve Ditko, he first appeared in Amazing Fantasy #15 (cover-dated Aug. 1962). </p>
-					<p>Lee and Ditko conceived the character as an orphan being raised by his Aunt May and Uncle Ben, and as a teenager, having to deal with the normal struggles of adolescence in addition to those of a costumed crimefighter.</p>
+					<h4>placeholder</h4>
+					<p>Insert lorem ipsum text</p>
 					<p><a href="blog01.html">Continue Reading...</a></p>
 				</div>
 
@@ -73,11 +85,11 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
+					<p><img src="" width="50px" height="50px"> <ba>person</ba></p>
 					<p><bd>January 3, 2014</bd></p>
 					<h4>An Image Post</h4>
-					<p><img class="img-responsive" src="assets/img/blog01.jpg" alt=""></p>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					<p><img class="img-responsive" src="" alt=""></p>
+					<p>Insert lorem ipsum text</p>
 					<p><a href="blog01.html">Continue Reading...</a></p>
 				</div>
 
@@ -90,10 +102,10 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
+					<p><img src="" width="50px" height="50px"> <ba>person</ba></p>
 					<p><bd>January 01, 2014</bd></p>
-					<h4>Believe In Yourself</h4>
-					<p class="bq">"A bird sitting on a tree is never afraid of the branch breaking, because her trust is not in the branch, but in her own wings."</p>
+					<h4>Header test</h4>
+					<p>Insert lorem ipsum text</p>
 				</div>
 
 			</div><!-- /row -->
@@ -108,33 +120,26 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<h4>My Bunker</h4>
+					<h4>Living at</h4>
 					<p>
-						Some Address 987,<br/>
-						+34 9054 5455, <br/>
-						Madrid, Spain.
+						San Francisco Bay Area,<br/>
+						California, USA.
 					</p>
 				</div><!-- /col-lg-4 -->
 				
 				<div class="col-lg-4">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Dribbble</a><br/>
-						<a href="#">Twitter</a><br/>
-						<a href="#">Facebook</a>
+						<a href="#">LinkedIn</a><br/>
+						<a href="#">GitHub</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
-				<div class="col-lg-4">
-					<h4>About Stanley</h4>
-					<p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
-				</div><!-- /col-lg-4 -->
 			
 			</div>
 		
 		</div>
 	</div>
-	
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
