--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>STANLEY - Free Bootstrap Theme </title>
+    <title>Kenneth Chang | Contact </title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,14 +39,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">STANLEY</a>
+          <a class="navbar-brand" href="index.html">Kenneth Chang</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+			  <li><a href="work.html">Work</a></li>
+			  <li><a href="projects.html">Projects</a></li>
+			  <li><a href="travel.html">Travel</a></li>
+			  <li><a href="blog.html">Blog</a></li>
+			  <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -60,10 +62,10 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>CONTACT ME</h3>
 				<hr>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+				<p>General Contact info+ links here</p>
 			</div>
 		</div>
-		<div class="row mt">	
+		<!-- <div class="row mt">	
 			<div class="col-lg-8 col-lg-offset-2">
 				<form role="form">
 				  <div class="form-group">
@@ -83,7 +85,7 @@
 				  <button type="submit" class="btn btn-success">SUBMIT</button>
 				</form>    			
 			</div>
-		</div><!-- /row -->
+		</div>/row -->
 	</div><!-- /container -->
 	
 	
