--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Kenneth Chang | Work </title>
+    <title>Kenneth Chang | Projects </title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -43,12 +43,12 @@
 		  </div>
 		  <div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html">About</a></li>
-				<li><a href="work.html">Work</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="travel.html">Travel</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
+			  <li><a href="about.html">About</a></li>
+			  <li><a href="work.html">Work</a></li>
+			  <li><a href="projects.html">Projects</a></li>
+			  <li><a href="travel.html">Travel</a></li>
+			  <li><a href="blog.html">Blog</a></li>
+			  <li><a href="contact.html">Contact</a></li>
   
 			</ul>
 		  </div><!--/.nav-collapse -->
@@ -61,24 +61,24 @@
 	<div class="container pt">
 		<div class="row mt">
 			<div class="col-lg-6 col-lg-offset-3 centered">
-				<h3>Work</h3>
+				<h3>Projects</h3>
 				<hr>
-				<p>My work experience has primarily focused on the medical device field, specifically in Research and Development. But I've also tried to explore my other passions, like video games, as well.</p>
+				<p>I love tinkering with different concepts and ideas. Sometime I'm successful, sometimes I'm not so successful. Click each for more details. Currently Under Construction</p>
 			</div>
 		</div>
 		<div class="row centered">	
 			<div class="col-lg-4">
 
-				<a class="green" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/work/work01-Prodeon/Logo.png" alt="" /></a>
-				<h2>Prodeon Medical / MedeonBio</h2>
-				<h4>R&D Engineer</h4>
-				<p>Jul 2016 - Current</p>
+				<a class="green" href="work/work01.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<h2>Cartographer</h2>
+				<h4>Using Graph Relation Networks to map influence in Publications</h4>
+				<p>2021-Current</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="green" href="work/work02.html"><img class="img-responsive folio_icon center" src="assets/img/work/work02-SAGE/logo_small.png" alt="" /></a>
-				<h2>SAGE</h2>
-				<h4>CTO</h4>
-				<p>Nov 2021 - May 2022</p>
+				<a class="green" href="work/work02.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<h2>Video Game Development in Unity</h2>
+				<h4>My foray in trying to develop a video game</h4>
+				<p>Aug-Sept 2019</p>
 			</div>
 
 		</div><!-- /row -->
