--- a/about.html
+++ b/about.html
@@ -41,12 +41,12 @@
 		  </div>
 		  <div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-			  <li><a href="about.html">About</a></li>
-			  <li><a href="work.html">Work</a></li>
-			  <li><a href="contact.html">Projects</a></li>
-			  <li><a href="testing.html">Travel</a></li>
-			  <li><a href="blog.html">Blog</a></li>
-			  <li><a href="contact.html">Contact</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="work.html">Work</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="travel.html">Travel</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="contact.html">Contact</a></li>
   
 			</ul>
 		  </div><!--/.nav-collapse -->
