--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <ul class="nav navbar-nav navbar-right">
 			<li><a href="about.html">About</a></li>
             <li><a href="work.html">Work</a></li>
-			<li><a href="contact.html">Projects</a></li>
-			<li><a href="testing.html">Travel</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="travel.html">Travel</a></li>
 			<li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
 
