--- a/work/work01.html
+++ b/work/work01.html
@@ -39,14 +39,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Kenneth Chang</a>
+        <a class="navbar-brand" href="../index.html">Kenneth Chang</a>
         </div>
         <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="../about.html">About</a></li>
           <li><a href="../work.html">Work</a></li>
-          <li><a href="../contact.html">Projects</a></li>
-          <li><a href="../testing.html">Travel</a></li>
+          <li><a href="../projects.html">Projects</a></li>
+          <li><a href="../travel.html">Travel</a></li>
           <li><a href="../blog.html">Blog</a></li>
           <li><a href="../contact.html">Contact</a></li>
     
