--- a/work/work01.html
+++ b/work/work01.html
@@ -97,10 +97,10 @@
           Certain portions of my work are now in the public domain, see patents listed below:
         </p>
 
-        <p><a href="https://patents.google.com/patent/US20180318114A1/"><b>US20180318114A1</b>(Pending), Implantable devices and methods to treat benign prostate hyperplasia (bph) and associated lower urinary tract symptoms (luts)</a></p>
-        <P><a href="https://patents.google.com/patent/US20210022594A1"><b>US20210022594A1</b>(Pending), Delivery systems and devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</a></P>
-        <p><a href="https://patents.google.com/patent/US20210161642A1"><b>US20210161642A1</b>(Pending), Devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</a></p>
-        <p><a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending), Self-actuating grasping device</a></p>
+        <a href="https://patents.google.com/patent/US20180318114A1/"><b>US20180318114A1</b>(Pending), Implantable devices and methods to treat benign prostate hyperplasia (bph) and associated lower urinary tract symptoms (luts)</a>
+        <a href="https://patents.google.com/patent/US20210022594A1"><b>US20210022594A1</b>(Pending), Delivery systems and devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</a>
+        <a href="https://patents.google.com/patent/US20210161642A1"><b>US20210161642A1</b>(Pending), Devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</a>
+        <a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending), Self-actuating grasping device</a>
         
       </div>
 
