--- a/work/work01.html
+++ b/work/work01.html
@@ -96,11 +96,15 @@
           Designs and components that I was responsible were successfully used in Animal, First-in-Human, and Investigational Device Exemption(IDE) Clinical Trials. 
           Certain portions of my work are now in the public domain, see patents listed below:
         </p>
+        <p>
+          <a href="https://patents.google.com/patent/US20180318114A1/"><b>US20180318114A1</b>(Pending)</a>, Implantable devices and methods to treat benign prostate hyperplasia (bph) and associated lower urinary tract symptoms (luts)<br>
+          <a href="https://patents.google.com/patent/US20210022594A1"><b>US20210022594A1</b>(Pending)</a>, Delivery systems and devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms<br>
+          <a href="https://patents.google.com/patent/US20210161642A1"><b>US20210161642A1</b>(Pending)</a>, Devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms<br>
+          <a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending)</a>, Self-actuating grasping device
 
-        <a href="https://patents.google.com/patent/US20180318114A1/"><b>US20180318114A1</b>(Pending), Implantable devices and methods to treat benign prostate hyperplasia (bph) and associated lower urinary tract symptoms (luts)</a><br>
-        <a href="https://patents.google.com/patent/US20210022594A1"><b>US20210022594A1</b>(Pending), Delivery systems and devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</a><br>
-        <a href="https://patents.google.com/patent/US20210161642A1"><b>US20210161642A1</b>(Pending), Devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</a><br>
-        <a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending), Self-actuating grasping device</a>
+        </p>
+
+        
         
       </div>
 
