--- a/work/work01.html
+++ b/work/work01.html
@@ -105,6 +105,10 @@
             <li><a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending)</a>, Self-actuating grasping device</li>
           </ul>
         </p>
+        <p>
+          In addition to my normal R&D responsibilities, I was also responsible for mentoring and coaching summer interns. 
+          This included planning out what activities and projects they would be assigned, providing guidance and answering questions as they encountered difficulties, and also familiarizing them with the details and complexities of designing a medical device.
+        </p>
       </div>
     </div><!-- /row -->
     <hr>
