--- a/work/work01.html
+++ b/work/work01.html
@@ -165,13 +165,17 @@
 				<p>
           Probably the most interesting part of my work was related to supporting Pre-Clinical and Clinical Trials, and not just because I got to travel.
           Any medical device development is always accompanied by testing both in-vivo and in-vitro.
-          At Prodeon Medical, I got to test the devices I had the opportunity to be directly involved in cadaver, animal, and First-in-Human clinical trials.
+          At Prodeon Medical, I had the opportunity to be directly involved in cadaver, animal, and First-in-Human clinical trials.
         </p>
         <p>
-
+          Organ cadavers were my first exposure to testing outside the bench, and was an invaluable tool in evaluating early designs.
+          Even the best bench models had limitations, and so these tests allowed us to rapidly screen out designs and test the feasibility of our proposed procedure.
+          Our extensive cadaver studies helped immensely in allowing us to succesfully start a longer term animal study within a year or so of the project start.
         </p>
+
+
         <P>
-          I was extensively involved with animal trials as well, both to help evaluate potential designs, and also to test the long-term efficacy of the implant. Here I manufactured and prepared devices to be used, 
+          I was extensively involved our animal trials, using the knowledge gained to evaluate potential designs, and to test the long-term efficacy of the implant. Here I manufactured and prepared devices to be used, 
           worked with the vetinary surgeon to implant the devices, and analyzed the collected data such as x-rays. I was also responsible for defining and executing our post-retrieval testing for the implants, which included 
           mechanical testing, and SEM imaging of the surface.
           
@@ -194,7 +198,7 @@
           we were able to drive a rapid prototype schedule. We would frequently develop using a shotgun approach of 3-4 different concpets or variations, and then bring them to evaluate. Through this rapid pace, 
           we were able to go from concept to a First-in-Human trial in around 2 years. 
         </P>
-        <p>One highlight was when I got to attend the 2018 American Urology Association meeting in San Francisco with the rest of the team. It was an invaluable experience, where we were able to demo to both 
+        <p>One highlight was when I got to attend the 2018 American Urology Association meeting in San Francisco . It was an invaluable experience, where we were able to demo to both 
           potential partners and active collaborators our next generation designs. I was also able to take the chance to familiarize myself with the state of the art in Urology, such as new surgical robotics, which helped 
           build a better understanding of the strength's of our product's approach. 
           </p>
