--- a/work/work01.html
+++ b/work/work01.html
@@ -93,7 +93,8 @@
 				<p>
           True to my title, the largest bulk of my work and responsibilities were in Research and Development.
           My primary responsibilities were designing, prototyping, testing, and iterating the implant, delivery system components and mechanisms, and retrieval accessories.
-          o	I collaborated extensively with both senior engineers and outside manufacturing firms to test new concepts and ideas, rapidly iterate to meet our requirements, solve emerging problems, manage the project schedule.
+          I collaborated extensively with both senior engineers and outside manufacturing firms to test new concepts and ideas, rapidly iterate to meet our requirements, solve emerging problems, manage the project schedule.
+          Through that collaborative effort, I was able to produce multiple generations of designs, each taking input and feedback from previous generations.
           Designs and components that I was responsible were successfully used in Animal, First-in-Human, and Investigational Device Exemption(IDE) Clinical Trials. 
           Certain portions of my work are now in the public domain, see patents listed below:
         </p>
