--- a/work/work01.html
+++ b/work/work01.html
@@ -203,8 +203,15 @@
           build a better understanding of the strength's of our product's approach. 
           </p>
 				<p>
-          Marketing is also how I began becoming interested in data analytics work. Our marketing manager was developing financial models to project future growth, and model the current market state, ie which procedures were used most often.
-          The problem sounded interesting enough to me, and so I independently embarked on a hunt to see what I could put together on my own. You can see the result of my little side adventure <a>here</a>. <!-- link out to project section  -->
+          Marketing is also how I began becoming interested in data analytics work.
+          Our marketing manager was developing financial models to project future growth, and model the current market state, ie which procedures were used most often.
+          The problem sounded interesting enough to me, and so I independently embarked on a hunt to see what I could put together on my own.
+          You can see the result of my little side adventure <a>here</a>. <!-- link out to project section  -->
+
+          Another problem that came up was how to identify Key Opinion Leaders.
+          From my R&D point of view, the process seemed a bit daunting, ie how would you be able to compare hundreds to thousands of different physicians, with any degree of nuance or specificity?
+          Talking with marketing, they confirmed to me that the entire process was indeed very manual, and mostly boiled down to networking.
+          This seemed like a sufficient unmet need to devote some effort to, you can see the project that came from this here <a>link to cartographer</a>
           
         </p>
          
