--- a/work/work01.html
+++ b/work/work01.html
@@ -100,10 +100,10 @@
         </p>
         <p>
           <ul>
-            <li><a href="https://patents.google.com/patent/US20180318114A1/"><b>US20180318114A1</b>(Pending)</a>, Implantable devices and methods to treat benign prostate hyperplasia (bph) and associated lower urinary tract symptoms (luts)</li>
-            <li><a href="https://patents.google.com/patent/US20210022594A1"><b>US20210022594A1</b>(Pending)</a>, Delivery systems and devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</li>
-            <li><a href="https://patents.google.com/patent/US20210161642A1"><b>US20210161642A1</b>(Pending)</a>, Devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</li>
-            <li><a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending)</a>, Self-actuating grasping device</li>
+            <li><a href="https://patents.google.com/patent/US20180318114A1/"><b>US20180318114A1</b>(Pending)</a> Implantable devices and methods to treat benign prostate hyperplasia (bph) and associated lower urinary tract symptoms (luts)</li>
+            <li><a href="https://patents.google.com/patent/US20210022594A1"><b>US20210022594A1</b>(Pending)</a> Delivery systems and devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</li>
+            <li><a href="https://patents.google.com/patent/US20210161642A1"><b>US20210161642A1</b>(Pending)</a> Devices for the treatment of benign prostatic hyperplasia and related lower urinary tract symptoms</li>
+            <li><a href="https://patents.google.com/patent/US20220008093A1"><b>US20220008093A1</b>(Pending)</a> Self-actuating grasping device</li>
           </ul>
         </p>
         <p>
