--- a/work/work02.html
+++ b/work/work02.html
@@ -43,8 +43,8 @@
         </div>
         <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../about.html">About</a></li>
-          <li><a href="../work.html">Work</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
           <li><a href="../projects.html">Projects</a></li>
           <li><a href="../travel.html">Travel</a></li>
           <li><a href="../blog.html">Blog</a></li>
@@ -53,7 +53,7 @@
         </ul>
         </div><!--/.nav-collapse -->
       </div>
-      </div>
+    </div>
 	
 	
 	<!-- +++++ Projects Section +++++ -->
