--- a/work/work02.html
+++ b/work/work02.html
@@ -21,6 +21,9 @@
     <script src="/assets/js/hover.zoom.js"></script>
     <script src="/assets/js/hover.zoom.conf.js"></script>
 
+    <!--headerfooterscript-->
+    <script src="/assets/js/HeaderFooterLoad.js"></script>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
