--- a/work/work02.html
+++ b/work/work02.html
@@ -45,7 +45,7 @@
         <a class="navbar-brand" href="../index.html">Kenneth Chang</a>
         </div>
         <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul id="headernavbar" class="nav navbar-nav navbar-right">
           <li><a href="/about.html">About</a></li>
           <li><a href="/work.html">Work</a></li>
           <li><a href="/projects.html">Projects</a></li>
