--- a/work/work02.html
+++ b/work/work02.html
@@ -105,7 +105,7 @@
           This was a major undertaking for two reasons:
           <br>
           <b>First:</b>
-          This was my first time coding in html/css/javascript. Minor problem, I know. I was essentially crash coursing my way through this, learning the languages as I built it.
+          This was my first time coding in html/css/javascript. Minor problem, I know. I was essentially crash coursing my way through this, learning the language(s) as I built it.
           <br>
           <b>Second:</b>
           The game developer had no public api available, and Twitch required all files, 
@@ -118,7 +118,7 @@
           Not having an api meant that I also had to have all of the potential assets needed on hand. I got partially lucky here, since the image assets and descriptions were readily scrapable,
           and I was able to do so with a basic <a href="https://pypi.org/project/requests/">requests</a> script. You can see the script here <a><i>github link here</i></a> My luck didn't last throughout though, particularly in regards to the skill descriptions. For whatever
           reason, certain descriptions were either incomplete, or featured errors, ie a skill was listed as doing 0 damage. I tried to cross reference between sites, but this wasn't foolproof, since the information could be sometimes universally missing,
-          or two sites would have conflicting information. Ultimately, the best and most consistent information I found was on the korean sites, particulaly Inven, which made sense since the game was first released in South Korea.   
+          or two sites would have conflicting information. Ultimately, the best and most consistent information I found was on the Korean sites, particulaly Inven, which made sense since the game was first released in South Korea.   
           
         </p>
         <p>Despite the challenges, I was able to succesfully code a working extension with all of our desired functionality in about a month and a half.
@@ -134,7 +134,7 @@
         <p>I thought it would be cool for other to be able to play with the extension, particularly since it would only ever be available during a stream. The nice thing is that Twitch Extensions are built like webpages, so I can insert an iframe here to demo it.
           Sizing is a bit small, since it was designed for a full screen, but you should be able to see the full functionality. 
           The extension was designed to be draggable, so that viewers could place it wherever worked best for them in the window, and a show/hide functionality so they could hide it when they wanted to focus on the match.
-          You can check out the code on github! <i>insert github link</i>
+          You can check out the code on github here <i>insert github link</i>
         </p>
       </div>
 
