--- a/work/work02.html
+++ b/work/work02.html
@@ -409,20 +409,20 @@
 	<div id="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4">
+				<div id="addressLine" class="col-lg-4">
 					<h4>Living at</h4>
-					<p>
+					<p >
 						San Francisco Bay Area,<br/>
 						California, USA.
 					</p>
 				</div><!-- /col-lg-4 -->
 				
-				<div class="col-lg-4">
+				<div  class="col-lg-4">
 					<h4>My Links</h4>
-					<p>
-						<a href="#">LinkedIn</a><br/>
-						<a href="#">GitHub</a>
-					</p>
+					<ul id="footerLinks">
+						<li><a href="#">LinkedIn</a></li>
+						<li><a href="#">GitHub</a></li>
+          </ul>
 				</div><!-- /col-lg-4 -->
 				
 			
