--- a/work/work02.html
+++ b/work/work02.html
@@ -411,17 +411,17 @@
 			<div class="row">
 				<div id="addressLine" class="col-lg-4">
 					<h4>Living at</h4>
-					<p>
+					<!-- <p>
 						San Francisco Bay Area,<br/>
 						California, USA.
-					</p>
+					</p> -->
 				</div><!-- /col-lg-4 -->
 				
 				<div  class="col-lg-4">
 					<h4>My Links</h4>
 					<ul id="footerLinks">
-						<li><a href="#">LinkedIn</a></li>
-						<li><a href="#">GitHub</a></li>
+						<!-- <li><a href="#">LinkedIn</a></li>
+						<li><a href="#">GitHub</a></li> -->
           </ul>
 				</div><!-- /col-lg-4 -->
 				
