--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <title>Kenneth Chang | Home </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/hover.zoom.js"></script>
-    <script src="assets/js/hover.zoom.conf.js"></script>
+    <script src="/assets/js/hover.zoom.js"></script>
+    <script src="/assets/js/hover.zoom.conf.js"></script>
+	<!--headerfooterscript-->
+    <script src="/assets/js/HeaderFooterLoad.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -32,28 +34,20 @@
 
     <!-- Static navbar -->
     <div class="navbar navbar-inverse navbar-static-top" >
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Kenneth Chang</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-			<li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-			<li><a href="projects.html">Projects</a></li>
-			<li><a href="travel.html">Travel</a></li>
-			<li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+		<div class="container">
+		  <div class="navbar-header">
+		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </button>
+		  <a class="navbar-brand" href="/index.html">Kenneth Chang</a>
+		  </div>
+		  <div class="navbar-collapse collapse">
+		  <ul id="headernavbar" class="nav navbar-nav navbar-right"></ul>
+		  </div><!--/.nav-collapse -->
+		</div>
+	  </div>
 
 	<!-- +++++ Welcome Section +++++ -->
 	<div id="ww" >
@@ -122,28 +116,20 @@
 	
 	<!-- +++++ Footer Section +++++ -->
 	
+
 	<div id="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4">
+				<div id="addressLine" class="col-lg-4">
 					<h4>Living at</h4>
-					<p>
-						San Francisco Bay Area,<br/>
-						California, USA.
-					</p>
 				</div><!-- /col-lg-4 -->
 				
-				<div class="col-lg-4">
+				<div  class="col-lg-4">
 					<h4>My Links</h4>
-					<p>
-						<a href="#">LinkedIn</a><br/>
-						<a href="#">GitHub</a>
-					</p>
+					<ul id="footerLinks">
+          </ul>
 				</div><!-- /col-lg-4 -->
-				
-			
 			</div>
-		
 		</div>
 	</div>
 	
@@ -151,6 +137,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
   </body>
 </html>
