--- a/projects.html
+++ b/projects.html
@@ -11,15 +11,18 @@
     <title>Kenneth Chang | Projects </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/hover.zoom.js"></script>
-    <script src="assets/js/hover.zoom.conf.js"></script>
+    <script src="/assets/js/hover.zoom.js"></script>
+    <script src="/assets/js/hover.zoom.conf.js"></script>
+
+	<!--headerfooterscript-->
+    <script src="/assets/js/HeaderFooterLoad.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -34,23 +37,15 @@
     <div class="navbar navbar-inverse navbar-static-top" >
 		<div class="container">
 		  <div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-			  <span class="icon-bar"></span>
-			  <span class="icon-bar"></span>
-			  <span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html">Kenneth Chang</a>
+		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </button>
+		  <a class="navbar-brand" href="/index.html">Kenneth Chang</a>
 		  </div>
 		  <div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right">
-			  <li><a href="about.html">About</a></li>
-			  <li><a href="work.html">Work</a></li>
-			  <li><a href="projects.html">Projects</a></li>
-			  <li><a href="travel.html">Travel</a></li>
-			  <li><a href="blog.html">Blog</a></li>
-			  <li><a href="contact.html">Contact</a></li>
-  
-			</ul>
+		  <ul id="headernavbar" class="nav navbar-nav navbar-right"></ul>
 		  </div><!--/.nav-collapse -->
 		</div>
 	  </div>
@@ -86,32 +81,24 @@
 	</div><!-- /container -->
 	
 	
-	<!-- +++++ Footer Section +++++ -->
 	
-	<div id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<h4>Living at</h4>
-					<p>
-						San Francisco Bay Area,<br/>
-						California, USA.
-					</p>
-				</div><!-- /col-lg-4 -->
-				
-				<div class="col-lg-4">
-					<h4>My Links</h4>
-					<p>
-						<a href="#">LinkedIn</a><br/>
-						<a href="#">GitHub</a>
-					</p>
-				</div><!-- /col-lg-4 -->
-				
+<!-- +++++ Footer Section +++++ -->
+	
+<div id="footer">
+	<div class="container">
+		<div class="row">
+			<div id="addressLine" class="col-lg-4">
+				<h4>Living at</h4>
+			</div><!-- /col-lg-4 -->
 			
-			</div>
-		
+			<div  class="col-lg-4">
+				<h4>My Links</h4>
+				<ul id="footerLinks">
+	  </ul>
+			</div><!-- /col-lg-4 -->
 		</div>
 	</div>
+</div>
 	
 
     <!-- Bootstrap core JavaScript
