--- a/work/work02.html
+++ b/work/work02.html
@@ -45,8 +45,7 @@
         <a class="navbar-brand" href="/index.html">Kenneth Chang</a>
         </div>
         <div class="navbar-collapse collapse">
-        <ul id="headernavbar" class="nav navbar-nav navbar-right">
-        </ul>
+        <ul id="headernavbar" class="nav navbar-nav navbar-right"></ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -416,9 +415,9 @@
 	</div>
 	
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/bootstrap.min.js"></script>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="/assets/js/bootstrap.min.js"></script>
   </body>
 </html>
