--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,18 @@
     <title>Kenneth Chang | Contact </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/hover.zoom.js"></script>
-    <script src="assets/js/hover.zoom.conf.js"></script>
+    <script src="/assets/js/hover.zoom.js"></script>
+    <script src="/assets/js/hover.zoom.conf.js"></script>
+
+	<!--headerfooterscript-->
+    <script src="/assets/js/HeaderFooterLoad.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -31,28 +34,21 @@
   <body>
 
     <!-- Static navbar -->
-    <div class="navbar navbar-inverse navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Kenneth Chang</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">About</a></li>
-			  <li><a href="work.html">Work</a></li>
-			  <li><a href="projects.html">Projects</a></li>
-			  <li><a href="travel.html">Travel</a></li>
-			  <li><a href="blog.html">Blog</a></li>
-			  <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    <div class="navbar navbar-inverse navbar-static-top" >
+		<div class="container">
+		  <div class="navbar-header">
+		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </button>
+		  <a class="navbar-brand" href="/index.html">Kenneth Chang</a>
+		  </div>
+		  <div class="navbar-collapse collapse">
+		  <ul id="headernavbar" class="nav navbar-nav navbar-right"></ul>
+		  </div><!--/.nav-collapse -->
+		</div>
+	  </div>
 	
 	
 	<!-- +++++ Contact Section +++++ -->
@@ -94,31 +90,16 @@
 	<div id="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4">
-					<h4>My Bunker</h4>
-					<p>
-						Some Address 987,<br/>
-						+34 9054 5455, <br/>
-						Madrid, Spain.
-					</p>
+				<div id="addressLine" class="col-lg-4">
+					<h4>Living at</h4>
 				</div><!-- /col-lg-4 -->
 				
-				<div class="col-lg-4">
+				<div  class="col-lg-4">
 					<h4>My Links</h4>
-					<p>
-						<a href="#">Dribbble</a><br/>
-						<a href="#">Twitter</a><br/>
-						<a href="#">Facebook</a>
-					</p>
+					<ul id="footerLinks">
+          </ul>
 				</div><!-- /col-lg-4 -->
-				
-				<div class="col-lg-4">
-					<h4>About Stanley</h4>
-					<p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
-				</div><!-- /col-lg-4 -->
-			
 			</div>
-		
 		</div>
 	</div>
 	
